objects/APTS_Stage_Approval_Rule_Matrix__c.object
<CustomObject>
    <description>Stage Approval rule matrix stores routing rules that will be configured by country admin and it drives the Quotation &amp; Agreement approvals.</description>
    <fields>
        <fullName>APTS_Active__c</fullName>
        <label>Active</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Level__c</fullName>
        <label>Approval Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Assigned_to__c</fullName>
        <label>Assigned to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Combined_Fields__c</fullName>
        <formula>TEXT(APTS_Country__c ) + TEXT( APTS_Sales_Organisation__c ) + ( APTS_Local_Channel__c) + ( APTS_Sales_Office__c ) + APTS_GTV_Level_Code__c + TEXT ( APTS_Approval_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country_ISO_code__c</fullName>
        <label>Country ISO code</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_GTV_Level_Code__c</fullName>
        <label>GTV Level Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GTV_Level__c</fullName>
        <label>GTV Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Legacy_Rule_ID__c</fullName>
        <label>Legacy Rule ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Channel_Name__c</fullName>
        <label>Local Channel Name</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadristas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadristas CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribución General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integradores y EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEMS CD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Channel__c</fullName>
        <label>Local Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Max_Discount__c</fullName>
        <label>Max Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Operation Object</description>
        <label>Approval Rule Matrix</label>
        <referenceTo>APTS_Approval_Rule_Matrix__c</referenceTo>
        <relationshipLabel>Stage Approval Rule Matrix</relationshipLabel>
        <relationshipName>Stage_Approval_Rule_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <label>Row Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Office_Name__c</fullName>
        <label>Sales Office Name</label>
        <picklist>
            <picklistValues>
                <fullName>Barcelona</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Organisation__c</fullName>
        <label>Sales Organisation</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Threshold_Discount__c</fullName>
        <label>Threshold Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Stage Approval Rule Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Country_ISO_code__c</columns>
        <columns>APTS_Sales_Organisation__c</columns>
        <columns>APTS_Local_Channel__c</columns>
        <columns>APTS_Sales_Office__c</columns>
        <columns>APTS_GTV_Level_Code__c</columns>
        <columns>APTS_Approval_Level__c</columns>
        <columns>APTS_Threshold_Discount__c</columns>
        <columns>APTS_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ARM-{00000000}</displayFormat>
        <label>Stage Approval Rule Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Approval Rule Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>